// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package compose;

// Whether we should show the nudge, disable the nudge, or disable the whole
// feature for this URL.
enum ComposeHintDecision {
  // Chrome will decide what to do on its own.
  COMPOSE_HINT_DECISION_UNSPECIFIED = 0;

  // The nudge and context menu are enabled.
  COMPOSE_HINT_DECISION_ENABLED = 1;

  // The nudge is disabled, but context menu is still enabled.
  COMPOSE_HINT_DECISION_DISABLE_NUDGE = 2;

  // The nudge and context menu are both disabled.
  COMPOSE_HINT_DECISION_COMPOSE_DISABLED = 3;
}

// Guidance from the optimization guide for the compose feature on this URL.
message ComposeHintMetadata {
  optional ComposeHintDecision decision = 1;
}
